# brepimport

./: Cargo.toml  README.md  clippy.toml  flake.nix  index.html  rustfmt.toml
.cargo/: config.toml
assets/brep/: README.md
assets/shaders/: basic.wgsl
assets/step/: README.md
pkg/: index.html
src/: app.rs  camera.rs  lib.rs  main.rs  mesh.rs  state.rs  test
