[package]
edition = "2024"
version = "1.0.0"
name = "brepimport"
description = "A Rust library for importing BREP objects."
repository = "https://github.com/NYANLAUNCHER/brepimport"
license = "MIT"
keywords = ["brep", "cad", "step"]
#build = "build/main.rs"

[profile.release]
strip = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Import STEP files
step-import = []
# Convert STEP files into BREP
step-convert = []
step = ["step-import", "step-convert"]

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "28.0", features = ["webgl"]}
wasm-bindgen = "=0.2.106"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
