[package]
edition = "2024"
version = "1.0.0"
name = "brepimport"
description = "A Rust library for importing BREP objects."
repository = "https://github.com/NYANLAUNCHER/brepimport"
license = "MIT"
keywords = ["brep", "cad", "step"]
#build = "build/main.rs"

[profile.release]
strip = true

[dependencies]
cfg-if = "1"
console_log = "0.2.0"
log = "0.4"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["time"] }
anyhow = "1.0"
pollster = "0.3"
#winit = "0.30.12"
#wgpu = "28.0"
wgpu = "0.13.1"
winit = "0.27.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
tracing-wasm = "0.2.1"
wgpu = { version = "28.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
