[package]
edition = "2024"
version = "0.1.0"
name = "brepimport"
description = "A Rust library for importing BREP objects."
repository = "https://github.com/NYANLAUNCHER/brepimport"
license = "MIT"
keywords = ["brep", "cad", "step"]
default-run = "brepview"
build = "build/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = "symbols"
opt-level = 3

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
pollster = "0.3"
chrono = "0.4.43"
wasm-bindgen = "=0.2.106"
cgmath = "0.18"
wgpu = "28.0"
winit = { version = "0.30", features = ["x11"]}
bytemuck = { version = "1.24", features = [ "derive" ] }
pretty-hex = "0.4.1"
colored = "3.1.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "28.0", features = ["webgl"]}
wasm-bindgen = "=0.2.106"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
]}
